--- a/lang/lif-lang.cabal
+++ b/lang/lif-lang.cabal
@@ -4,25 +4,25 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a245980dc380974c65aabcaaac5e3affcf76a39ecab5c1e3dbb67fe3d1da3cd1
+-- hash: 534e623f0a1d10fa91239a40b4816d5ba621c2e8e095701ee76ed13e2542b5a0
 
-name:           lif
+name:           lif-lang
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/lif#readme>
-homepage:       https://github.com/githubuser/lif#readme
-bug-reports:    https://github.com/githubuser/lif/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2020 Author name here
-license:        BSD3
+description:    Please see the README on GitHub at <https://github.com/luigidcsoares/lif/tree/master/lang#readme>
+homepage:       https://github.com/luigidcsoares/lif/tree/master/lang#readme
+bug-reports:    https://github.com/luigidcsoares/lif/tree/master/lang/issues
+author:         Luigi D. C. Soares
+maintainer:     luigidcsoares@gmail.com
+copyright:      2020 Luigi D. C. Soares
+license:        GPL-3
+license-file:   LICENSE.txt
 build-type:     Simple
 extra-source-files:
     README.md
-    ChangeLog.md
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/lif
+  location: https://github.com/luigidcsoares/lif/tree/master/lang
 
 library
   exposed-modules:
@@ -39,7 +39,7 @@ library
       Internal.Map
       Pass.Invariant
   other-modules:
-      Paths_lif
+      Paths_lif_lang
   hs-source-dirs:
       src
   build-depends:
@@ -55,7 +55,7 @@ library
 executable lif-exe
   main-is: Main.hs
   other-modules:
-      Paths_lif
+      Paths_lif_lang
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -65,7 +65,7 @@ executable lif-exe
     , bytestring
     , containers
     , hspec
-    , lif
+    , lif-lang
     , mtl
     , parsec
   default-language: Haskell2010
@@ -74,7 +74,7 @@ test-suite lif-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_lif
+      Paths_lif_lang
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -84,7 +84,7 @@ test-suite lif-test
     , bytestring
     , containers
     , hspec
-    , lif
+    , lif-lang
     , mtl
     , parsec
   default-language: Haskell2010
