Added command-line tool
- unroll: try to unroll existing loops
- opt: optimize the transformed functions
- names: list of functions to be transformed
- len-args: insert the length arguments to every function

--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -80,11 +80,10 @@ endif()
 
 # Set the build directories
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 
 #===============================================================================
 # 4. ADD SUB-TARGETS
 # Doing this at the end so that all definitions and link/include paths are
 # available for the sub-projects.
 #===============================================================================
-add_subdirectory(lib)
+add_subdirectory(tool)
