--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -1,7 +1,7 @@
 #===============================================================================
 # See: https://github.com/banach-space/llvm-tutor/blob/master/CMakeLists.txt
 #===============================================================================
-cmake_minimum_required(VERSION 3.4.3)
+cmake_minimum_required(VERSION 3.13.4)
 project(llvm-lif)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -9,20 +9,20 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #===============================================================================
 # 1. VERIFY LLVM INSTALLATION DIR
 #===============================================================================
-# Set this to a valid LLVM installation dir
-set(LT_LLVM_INSTALL_DIR "" CACHE PATH "LLVM installation directory")
+# Set this to a valid LLVM installation dir:
+set(LLVM_INSTALL_DIR "" CACHE PATH "LLVM installation directory")
 
-# A bit of a sanity checking
-set(LT_LLVM_INCLUDE_DIR "${LT_LLVM_INSTALL_DIR}/include/llvm")
-if(NOT EXISTS "${LT_LLVM_INCLUDE_DIR}")
+# A bit of a sanity checking:
+set(LLVM_INSTALL_INCLUDE "${LLVM_INSTALL_DIR}/include/llvm")
+if(NOT EXISTS "${LLVM_INSTALL_INCLUDE}")
 message(FATAL_ERROR
-  " LT_LLVM_INSTALL_DIR (${LT_LLVM_INCLUDE_DIR}) is invalid.")
+    " LLVM_INSTALL_INCLUDE (${LLVM_INSTALL_INCLUDE}) is invalid.")
 endif()
 
-set(LT_LLVM_CMAKE_FILE "${LT_LLVM_INSTALL_DIR}/lib/cmake/llvm/LLVMConfig.cmake")
-if(NOT EXISTS "${LT_LLVM_CMAKE_FILE}")
+set(LLVM_INSTALL_CMAKE "${LLVM_INSTALL_DIR}/lib/cmake/llvm/LLVMConfig.cmake")
+if(NOT EXISTS "${LLVM_INSTALL_CMAKE}")
 message(FATAL_ERROR
-    " LT_LLVM_CMAKE_FILE (${LT_LLVM_CMAKE_FILE}) is invalid.")
+    " LLVM_INSTALL_CMAKE (${LLVM_INSTALL_CMAKE}) is invalid.")
 endif()
 
 #===============================================================================
@@ -30,8 +30,8 @@ endif()
 #    For more: http://llvm.org/docs/CMake.html#embedding-llvm-in-your-project
 #===============================================================================
 # Add the location of LLVMConfig.cmake to CMake search paths (so that
-# find_package can locate it)
-list(APPEND CMAKE_PREFIX_PATH "${LT_LLVM_INSTALL_DIR}/lib/cmake/llvm/")
+# find_package can locate it):
+list(APPEND CMAKE_PREFIX_PATH "${LLVM_INSTALL_DIR}/lib/cmake/llvm/")
 
 find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
@@ -50,7 +50,7 @@ link_directories(${LLVM_LIBRARY_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 #===============================================================================
-# 3. LLVM-TUTOR BUILD CONFIGURATION
+# 3. LIF BUILD CONFIGURATION
 #===============================================================================
 set(CMAKE_CXX_STANDARD 17 CACHE STRING "")
 
@@ -70,7 +70,7 @@ if(NOT LLVM_ENABLE_RTTI)
 endif()
 
 # -fvisibility-inlines-hidden is set when building LLVM and on Darwin warnings
-# are triggered if llvm-tutor is built without this flag (though otherwise it
+# are triggered if llvm-lif is built without this flag (though otherwise it
 # builds fine). For consistency, add it here too.
 include(CheckCXXCompilerFlag)
 check_cxx_compiler_flag("-fvisibility-inlines-hidden" SUPPORTS_FVISIBILITY_INLINES_HIDDEN_FLAG)
