[Added] Collapsed CFG
- [ok] Construction of the CCFG
- [ok] Topological sort
- [ok] DOT visualization
- [todo] Tainted information
- [todo] Partial linearization

--- a/lif/tool/CMakeLists.txt
+++ b/lif/tool/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(lif
     ../lib/Loop.cpp
     ../lib/Func.cpp
     ../lib/Module.cpp
+    ../lib/CCFG.cpp
     )
 
 target_link_libraries(lif LLVMPasses)
