--- a/lif/CMakeLists.txt
+++ b/lif/CMakeLists.txt
@@ -62,6 +62,7 @@ endif()
 
 # Compiler flags
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall\
+    -Wno-mismatched-new-delete\
     -fdiagnostics-color=always")
 
 # LLVM is normally built without RTTI. Be consistent with that.
