[Updated] Taint information
- We rely only on data depence to find tainted nodes

--- a/lif/CMakeLists.txt
+++ b/lif/CMakeLists.txt
@@ -80,7 +80,7 @@ if (${SUPPORTS_FVISIBILITY_INLINES_HIDDEN_FLAG} EQUAL "1")
 endif()
 
 # Set the build directories
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
 #===============================================================================
 # 4. ADD SUB-TARGETS
